--- a/almaz_pdo/tester/res/layout/activity_main.xml
+++ b/almaz_pdo/tester/res/layout/activity_main.xml
@@ -7,26 +7,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button2"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_vertical"
-        android:text="@string/new_user" 
-        android:onClick="registerNewUser"/>
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="148dp"
-        android:gravity="center_vertical"
-        android:text="@string/already_registered" 
-        android:onClick="showUserChooser"/>
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
@@ -36,6 +16,25 @@
         android:layout_marginTop="45dp"
         android:text="@string/exit" 
         android:onClick="finishTest"/>
-    
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:gravity="center_vertical"
+        android:onClick="showUserChooser"
+        android:text="@string/already_registered" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button3"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_vertical"
+        android:onClick="registerNewUser"
+        android:text="@string/new_user" />
 
 </RelativeLayout>
