--- a/almaz_pdo/tester/res/layout/activity_registration.xml
+++ b/almaz_pdo/tester/res/layout/activity_registration.xml
@@ -9,11 +9,30 @@
     tools:context=".RegistrationActivity" >
 
     <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button3"
+        android:layout_centerHorizontal="true"
+        android:onClick="deleteUser"
+        android:text="Удалить пользователя" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button1"
+        android:layout_centerHorizontal="true"
+        android:onClick="drawGraph"
+        android:text="Нарисовать график" />
+
+    <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="116dp"
         android:onClick="startTest"
         android:text="Начать тест" />
 
@@ -21,18 +40,9 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/button1"
+        android:layout_alignLeft="@+id/button1"
         android:layout_below="@+id/button2"
-        android:text="Просмотр результатов"
-		android:onClick="showResults"/>
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button3"
-        android:layout_centerHorizontal="true"
-        android:onClick="deleteUser"
-        android:text="Удалить пользователя"/>
+        android:onClick="showResults"
+        android:text="Просмотр результатов" />
 
 </RelativeLayout>
