--- a/ShmaxPPS_rusalov/res/layout/activity_screen_4.xml
+++ b/ShmaxPPS_rusalov/res/layout/activity_screen_4.xml
@@ -1,27 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/chooseTest"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/chooseTest"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <ListView
-        android:id="@+id/listResults"
-        android:layout_width="match_parent"
-        android:layout_height="360dp"
-        android:layout_weight="0.92" >
-    </ListView>
 
     <Button
         android:id="@+id/toMenuButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
         android:text="@string/toMenuButton" />
 
-</LinearLayout>
+    <ListView
+        android:id="@+id/listResults"
+        android:layout_width="match_parent"
+        android:layout_height="360dp"
+        android:layout_above="@+id/toMenuButton"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/chooseTest"
+        android:layout_weight="0.92" >
+
+    </ListView>
+
+    <TextView
+        android:id="@+id/chooseTest"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/chooseTimeTest"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+</RelativeLayout>
