--- a/ShmaxPPS_rusalov/res/layout/activity_screen_2.xml
+++ b/ShmaxPPS_rusalov/res/layout/activity_screen_2.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
@@ -7,20 +7,24 @@
         android:id="@+id/instruction"
         android:layout_width="match_parent"
         android:layout_height="360dp"
+        android:layout_above="@+id/start"
         android:text="@string/instruction"
-		android:textSize="20sp"/>
-    	
-
-    <Button
-        android:id="@+id/start"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/startButton" />
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/backButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
         android:text="@string/back" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/start"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/backButton"
+        android:layout_alignParentLeft="true"
+        android:text="@string/startButton" />
+
+</RelativeLayout>
