--- a/ShmaxPPS_rusalov/res/layout/activity_screen_3.xml
+++ b/ShmaxPPS_rusalov/res/layout/activity_screen_3.xml
@@ -1,49 +1,55 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/counter"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:layout_gravity="right"
-        android:text="counter"
-        android:textSize="30sp" />
-
-    <TextView
-        android:id="@+id/textQuestion"
-        android:layout_width="match_parent"
-        android:layout_height="260dp"
-        android:layout_gravity="center_vertical"
-        android:text="textQuestion"
-        android:textSize="25sp" />
-    	
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="vertical" >
 
-        <Button
-            android:id="@+id/no"
-            android:layout_width="160dp"
-            android:layout_height="wrap_content"
-            android:text="@string/no" />
-
-        <Button
-            android:id="@+id/yes"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/counter"
+            android:layout_width="wrap_content"
+            android:layout_height="108dp"
             android:layout_gravity="right"
-            android:text="@string/yes" />
+            android:text="counter"
+            android:textSize="30sp" />
     </LinearLayout>
 
     <Button
         android:id="@+id/mainMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
         android:text="@string/mainMenu" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/no"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/mainMenu"
+        android:layout_alignParentLeft="true"
+        android:text="@string/no" />
+
+    <Button
+        android:id="@+id/yes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/no"
+        android:layout_alignBottom="@+id/no"
+        android:layout_toRightOf="@+id/no"
+        android:text="@string/yes" />
+
+    <TextView
+        android:id="@+id/textQuestion"
+        android:layout_width="match_parent"
+        android:layout_height="260dp"
+        android:layout_above="@+id/no"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/linearLayout1"
+        android:text="textQuestion"
+        android:textSize="25sp" />
+
+</RelativeLayout>
