--- a/fmsnew_KettelsTest/Kettell'sTest/res/layout/activity_finalize_testing.xml
+++ b/fmsnew_KettelsTest/Kettell'sTest/res/layout/activity_finalize_testing.xml
@@ -10,6 +10,7 @@
     tools:context=".FinalizeTesting" >
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -20,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="left|center_vertical"
-        android:text="@string/mainMenu" />
+        android:text="@string/mainMenu"
+        android:onClick="onMainMenuClick" />
 
     <Button
         android:id="@+id/button2"
