--- a/fmsnew_KettelsTest/Kettell'sTest/res/layout/activity_short_break_between_parts.xml
+++ b/fmsnew_KettelsTest/Kettell'sTest/res/layout/activity_short_break_between_parts.xml
@@ -16,26 +16,13 @@
         android:layout_weight="1"
         android:text="@string/short_break" />
 
-    <ProgressBar
-        android:id="@+id/progressBar1"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
-
-    <ProgressBar
-        android:id="@+id/progressBar2"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.1" />
-
     <Button
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="left|center_vertical"
-        android:text="@string/skip" />
+        android:text="@string/skip"
+        android:onClick="onSkipClick" />
 
     <Button
         android:id="@+id/button2"
