--- a/antonagat_eysenck/res/layout/activity_first.xml
+++ b/antonagat_eysenck/res/layout/activity_first.xml
@@ -14,8 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="85dp"
-        android:onClick="onClickChooseExit"
+        android:layout_marginBottom="36dp"
+        android:onClick="onClickExit"
         android:text="@string/exitButton" />
 
     <Button
@@ -23,8 +23,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/button3"
-        android:layout_alignLeft="@+id/button1"
-        android:layout_marginBottom="29dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="18dp"
         android:onClick="onClickChooseTest"
         android:text="@string/chooseUser" />
 
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/button2"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="16dp"
         android:onClick="onClickChooseAddUser"
         android:text="@string/newUser" />
 
