--- a/antonagat_eysenck/res/layout/activity_result.xml
+++ b/antonagat_eysenck/res/layout/activity_result.xml
@@ -9,8 +9,12 @@
     tools:context=".ResultActivity" >
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/dch12"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </RelativeLayout>
