--- a/antonagat_eysenck/res/layout/activity_profile.xml
+++ b/antonagat_eysenck/res/layout/activity_profile.xml
@@ -13,42 +13,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="19dp" >
-
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:onClick="deletefixRowAll"
-            android:text="@string/deleteButton" />
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical" >
 
         <Button
             android:id="@+id/button3"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onClickNewTest"
             android:text="@string/NewTest" />
-    </LinearLayout>
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="@string/ShowResult" />
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:onClick="dialogAlert"
+            android:text="@string/deleteButton" />
+
+    </LinearLayout>
 
     <ListView
         android:id="@+id/listView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/linearLayout1"
-        android:layout_alignLeft="@+id/linearLayout1"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="15dp" >
-
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="18dp" >
     </ListView>
 
 </RelativeLayout>
