--- a/antonagat_eysenck/res/layout/activity_test.xml
+++ b/antonagat_eysenck/res/layout/activity_test.xml
@@ -8,24 +8,6 @@
 
     tools:context=".TestActivity" >
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:text="@string/name" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp"
-        android:text="@string/stringTest" />
-
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
@@ -40,9 +22,8 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button2"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="36dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:gravity="center_horizontal" >
 
         <Button
@@ -50,18 +31,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="75dp"
-            android:layout_weight="0.62"
+            android:layout_weight="0.47"
             android:onClick="clickOnYes"
             android:text="@string/YesButton" />
 
         <Button
             android:id="@+id/Button01"
-            android:layout_width="85dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="36dp"
             android:layout_weight="0.41"
             android:onClick="clickOnNo"
             android:text="@string/NoButton" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/linearLayout2"
+        android:layout_marginTop="32dp"
+        android:text="@string/stringTest" />
 
 </RelativeLayout>
