Quiz is done. imho
TODO: fix bugs

--- a/ilirhin/res/layout-land/activity_exit_test.xml
+++ b/ilirhin/res/layout-land/activity_exit_test.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:text="@string/goodbye"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
