--- a/ilirhin/res/layout/activity_registration.xml
+++ b/ilirhin/res/layout/activity_registration.xml
@@ -11,27 +11,27 @@
     <Button
         android:id="@+id/RegistartionNewUserButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50sp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="101dp"
+        android:layout_marginTop="101sp"
         android:onClick="onNewUserButtonClick"
         android:text="@string/new_user" />
 
     <Button
         android:id="@+id/RegistartionExistingUserButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50sp"
         android:layout_alignLeft="@+id/RegistartionNewUserButton"
         android:layout_below="@+id/RegistartionNewUserButton"
-        android:layout_marginTop="62dp"
+        android:layout_marginTop="62sp"
         android:onClick="onExistingUserButtonClick"
         android:text="@string/existing_user" />
 
     <Button
         android:id="@+id/RegistationExitTestButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="170sp"
+        android:layout_height="50sp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:onClick="onExitTestButtonClick"
