--- a/ilirhin/res/layout-land/activity_main_menu.xml
+++ b/ilirhin/res/layout-land/activity_main_menu.xml
@@ -5,21 +5,12 @@
     android:orientation="vertical" >
 
     <Button
-        android:id="@+id/MainMenuExitButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:onClick="onMainMenuExitButtonClick"
-        android:text="@string/exit_test" />
-
-    <Button
         android:id="@+id/MainMenuViewResultsButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50sp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="50sp"
         android:onClick="onMainMenuViewResultsButtonClick"
         android:text="@string/view_results"
         android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -27,9 +18,10 @@
     <Button
         android:id="@+id/MainMenuStartTestButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50sp"
         android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/MainMenuViewResultsButton"
+        android:layout_marginTop="40sp"
         android:onClick="onMainMenuStartTestButtonClick"
         android:text="@string/start_test"
         android:textAppearance="?android:attr/textAppearanceLarge" />
