--- a/ilirhin/res/layout-land/activity_new_user.xml
+++ b/ilirhin/res/layout-land/activity_new_user.xml
@@ -5,16 +5,6 @@
     android:orientation="vertical" >
 
     <RadioButton
-        android:id="@+id/NewUserRadioButtonMale"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="20dp"
-        android:onClick="onNewUserRadioButtonClick"
-        android:text="@string/male" />
-
-    <RadioButton
         android:id="@+id/NewUserRadioButtonFemale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,61 +15,60 @@
         android:text="@string/female" />
 
     <Button
-        android:id="@+id/NewUserButtonContinue"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/NewUserButtonReturn"
-        android:layout_alignParentLeft="true"
-        android:gravity="center_horizontal"
-        android:onClick="onButtonContinueClick"
-        android:text="@string/ok" />
-
-    <Button
         android:id="@+id/NewUserButtonReturn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50sp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/NewUserButtonExit"
         android:onClick="onButtonReturnClick"
         android:text="@string/return_to_registration" />
 
-    <Button
-        android:id="@+id/NewUserButtonExit"
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/NewUserRadioButtonMale"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:onClick="onButtonExitClick"
-        android:text="@string/exit_test" />
+        android:layout_height="30sp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="20sp"
+        android:layout_marginTop="37sp"
+        android:text="@string/enter_name" />
+
+    <Button
+        android:id="@+id/NewUserButtonContinue"
+        android:layout_width="match_parent"
+        android:layout_height="50sp"
+        android:layout_above="@+id/NewUserButtonReturn"
+        android:layout_alignParentLeft="true"
+        android:gravity="center"
+        android:onClick="onButtonContinueClick"
+        android:text="@string/ok" />
 
     <EditText
         android:id="@+id/NewUserUserName"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="45sp"
+        android:layout_alignBaseline="@+id/NewUserRadioButtonMale"
         android:layout_alignBottom="@+id/NewUserRadioButtonMale"
         android:layout_alignLeft="@+id/textView2"
         android:ems="10"
         android:inputType="textPersonName" />
 
-    <TextView
-        android:id="@+id/textView2"
+    <RadioButton
+        android:id="@+id/NewUserRadioButtonMale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="37dp"
-        android:text="@string/enter_name" />
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_below="@+id/textView1"
+        android:onClick="onNewUserRadioButtonClick"
+        android:text="@string/male" />
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="170sp"
+        android:layout_height="50sp"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/textView2"
-        android:layout_marginRight="58dp"
+        android:layout_marginRight="88sp"
         android:text="@string/enter_sex"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
