--- a/ilirhin/res/layout-land/activity_start_test.xml
+++ b/ilirhin/res/layout-land/activity_start_test.xml
@@ -1,66 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent" 
+    android:id="@+id/scrollView1"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentTop="true" >
 
-    <ScrollView
-        android:id="@+id/scrollView1"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" >
+        android:layout_height="324sp"
+        android:orientation="vertical" >
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/textView1"
             android:layout_width="match_parent"
-            android:layout_height="324dp"
-            android:orientation="vertical" >
+            android:layout_height="wrap_content"
+            android:text="@string/big_text"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
 
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/big_text"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-             
-            <Button
-		        android:id="@+id/StartTestExitTestButton"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_alignParentRight="true"
-		        android:layout_below="@+id/StartTestStartTestButton"
-		        android:layout_marginTop="18dp"
-		        android:onClick="onStartTestExitTestButtonClick"
-		        android:text="@string/exit_test"
-		        android:textAppearance="?android:attr/textAppearanceSmall" />
+  <Button
+      android:id="@+id/StartTestStartTestButton"
+      android:layout_width="240sp"
+      android:layout_height="40sp"
+      android:layout_alignBaseline="@+id/StartTestExitMenuButton"
+      android:layout_alignBottom="@+id/StartTestExitMenuButton"
+      android:layout_alignParentRight="true"
+      android:onClick="onStartTestStartTestButtonClick"
+      android:text="@string/start_test"
+      android:textAppearance="?android:attr/textAppearanceSmall" />
 
-		    <Button
-		        android:id="@+id/StartTestExitMenuButton"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_alignParentLeft="true"
-		        android:layout_below="@+id/textView1"
-		        android:layout_marginLeft="19dp"
-		        android:layout_marginTop="25dp"
-		        android:onClick="onStartTestExitMenuButtonClick"
-		        android:text="@string/exit_menu"
-		        android:textAppearance="?android:attr/textAppearanceSmall" />
-		
-		    <Button
-		        android:id="@+id/StartTestStartTestButton"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_alignBaseline="@+id/StartTestExitMenuButton"
-		        android:layout_alignBottom="@+id/StartTestExitMenuButton"
-		        android:layout_alignLeft="@+id/StartTestExitTestButton"
-		        android:onClick="onStartTestStartTestButtonClick"
-		        android:text="@string/start_test"
-		        android:textAppearance="?android:attr/textAppearanceSmall" />
+  <Button
+      android:id="@+id/StartTestExitMenuButton"
+      android:layout_width="240sp"
+      android:layout_height="40sp"
+      android:layout_alignParentLeft="true"
+      android:layout_below="@+id/textView1"
+      android:layout_marginTop="48sp"
+      android:onClick="onStartTestExitMenuButtonClick"
+      android:text="@string/exit_menu"
+      android:textAppearance="?android:attr/textAppearanceSmall" />
 
-        </RelativeLayout>
-    </ScrollView>
-
-   
-
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
