--- a/ilirhin/res/layout/activity_choose_existing_user.xml
+++ b/ilirhin/res/layout/activity_choose_existing_user.xml
@@ -10,43 +10,35 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/match_parent"
-        android:layout_marginTop="21dp" />
-
-    <TextView
-        android:id="@+id/match_parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/available_users" />
-
-    <Button
-        android:id="@+id/ChooseExistingUserButtonExit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_toRightOf="@+id/ChooseExistingUserButtonReturn"
-        android:onClick = "OnChooseExistingUserButtonExitClick"
-        android:text="@string/exit_test" />
+        android:gravity="center"
+        android:layout_marginTop="21sp" />
 
     <Button
         android:id="@+id/ChooseExistingUserButtonReturn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignRight="@+id/match_parent"
-        android:onClick = "OnChooseExistingUserButtonReturnClick"
+        android:layout_alignParentRight="true"
+        android:onClick="OnChooseExistingUserButtonReturnClick"
         android:text="@string/return_to_registration" />
 
     <Button
         android:id="@+id/ChooseExistingUserButtonContinue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/ChooseExistingUserButtonExit"
-        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/ChooseExistingUserButtonReturn"
+        android:layout_alignParentLeft="true"
         android:onClick="OnChooseExistingUserButtonContinueClick"
         android:text="@string/continue_" />
+
+    <TextView
+        android:id="@+id/match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:gravity="center"
+        android:text="@string/available_users" />
 
 </RelativeLayout>
