--- a/ilirhin/res/layout/activity_exit_test.xml
+++ b/ilirhin/res/layout/activity_exit_test.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="188dp"
-        android:gravity="center_horizontal"
+        android:layout_marginTop="188sp"
+        android:gravity="center"
         android:text="@string/goodbye"
         android:textAppearance="?android:attr/textAppearanceLarge" />
     
