--- a/ilirhin/res/layout/activity_main_menu.xml
+++ b/ilirhin/res/layout/activity_main_menu.xml
@@ -10,19 +10,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="218dp"
+        android:gravity="center"
+        android:layout_marginTop="218sp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:onClick="onMainMenuStartTestButtonClick"
         android:text="@string/start_test" />
-
-    <Button
-        android:id="@+id/MainMenuExitButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:onClick="onMainMenuExitButtonClick"
-        android:text="@string/exit_test" />
 
     <Button
         android:id="@+id/MainMenuViewResultsButton"
@@ -30,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/MainMenuStartTestButton"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="70sp"
         android:text="@string/view_results"
         android:onClick="onMainMenuViewResultsButtonClick"
         android:textAppearance="?android:attr/textAppearanceLarge" />
