--- a/ShmaxPPS_rusalov/res/layout/activity_screen_2.xml
+++ b/ShmaxPPS_rusalov/res/layout/activity_screen_2.xml
@@ -8,22 +8,15 @@
         android:layout_width="match_parent"
         android:layout_height="360dp"
         android:layout_above="@+id/start"
+        android:layout_alignParentTop="true"
         android:text="@string/instruction"
         android:textSize="20sp" />
-
-    <Button
-        android:id="@+id/backButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:text="@string/back" />
 
     <Button
         android:id="@+id/start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/backButton"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:text="@string/startButton" />
 
