--- a/res/layout/finalres.xml
+++ b/res/layout/finalres.xml
@@ -2,7 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical" >
-    
+
+    <TextView
+        android:id="@+id/finalPercent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+    <Button
+        android:id="@+id/buttonRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Правильные ходы" />
+
+    <Button
+        android:id="@+id/buttonWrong"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Неправильные ходы" />
 
 </LinearLayout>
