--- a/res/layout/testforold.xml
+++ b/res/layout/testforold.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/scrollView1"
+        android:id="@+id/scrollView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
         
 <TableLayout 
-    android:id="@+id/TableLayout1"
+    android:id="@+id/TableLayout2"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:gravity="center"
@@ -14,15 +14,15 @@
     android:orientation="vertical" >
     
     <TextView
-        android:id="@+id/rules"
+        android:id="@+id/rules2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Отмечай как можно быстрее треугольники и флажки слева направо. Старайся не пропускать их." >
+        android:text="Отмечай как можно быстрее \'Н\' и 'K' слева направо. Старайся не пропускать их." >
     </TextView>
     
     <TextView
-        android:id="@+id/moves"
+        android:id="@+id/moves2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -30,7 +30,7 @@
     </TextView>
     
 	<TextView
-        android:id="@+id/time_display_box"
+        android:id="@+id/time_display_box2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
