--- a/res/layout/finaltest.xml
+++ b/res/layout/finaltest.xml
@@ -8,6 +8,7 @@
         android:id="@+id/thanx_results"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="TextView" />
     
 </LinearLayout>
