--- a/hpotter_gottshaldtquiz/res/layout/activity_detailed_result.xml
+++ b/hpotter_gottshaldtquiz/res/layout/activity_detailed_result.xml
@@ -1,45 +1,14 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".DetailedResultActivity" >
-
-    <!--  
-    <TextView
-        android:id="@+id/text1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/correct_answers_count" />
-
-    <TextView
-        android:id="@+id/answersCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/text1"
-        android:layout_alignBottom="@+id/text1"
-        android:layout_marginLeft="2dp"
-        android:layout_toRightOf="@+id/text1"
-        android:text="TextView" />
-        
-    -->
+    android:padding="2dp" >
 
     <TextView
         android:id="@+id/detailedResultDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="@null" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="@string/delete_user_result_button_label"
-        android:onClick="deleteUserResultButtonClickHandler" />
-
-</RelativeLayout>
+</ScrollView>
